--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,6 +45,7 @@ subjects:
 - !lcsh 'Xenophon, 426 B.C.-355 B.C.'
 - !lcc 'DS'
 - !lcsh 'Iran -- History -- To 640'
+- GITenberg
 tableOfContents: The retreat of the ten thousand -- Napoleon's retreat from Moscow.
 title: The Two Great Retreats of History
 url: http://www.gutenberg.org/ebooks/26390
